--- a/client/styles.css
+++ b/client/styles.css
@@ -1,1 +1,3 @@
-/*//Initial commit*/
+body {
+  background: url(http://mlb.mlb.com/mlb/images/devices/ballpark/1920x1080/1.jpg) no-repeat center center fixed;
+}
