--- a/client/styles.css
+++ b/client/styles.css
@@ -14,6 +14,21 @@ body {
   left: 0;
   right: 0;
 }
+#imageContainer{
+  width: 100%;
+  height: 50%;
+  padding: 0;
+  margin: auto;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow:auto;
+  white-space:nowrap;
+
+}
 
 /*TODO fix positioning of images*/
 img{
@@ -22,6 +37,7 @@ img{
   position: relative;
   padding:10px;
   clear: right;
+  float: none;
   /*top: 0;
   bottom: 0;
   left: 0;
@@ -30,4 +46,10 @@ img{
 
 #active{
   transform: scale(1.25);
+}
+
+h1{
+  color:white;
+  font-size: 10px;
+  display:inline;
 }
