--- a/client/styles.css
+++ b/client/styles.css
@@ -16,7 +16,7 @@ body {
 }
 #imageContainer{
   width: 100%;
-  height: 50%;
+  height: 70%;
   padding: 0;
   margin: auto;
   display: block;
@@ -33,7 +33,7 @@ body {
 /*TODO fix positioning of images*/
 img{
   display: inline;
-  margin: auto;
+  margin-top: 50px;
   position: relative;
   padding:10px;
   clear: right;
@@ -44,12 +44,32 @@ img{
   right: 0;*/
 }
 
-#active{
-  transform: scale(1.25);
+.active{
+  margin: auto;
+  overflow: auto;
+  display: inline;
+  height:100%;
+  background-color: blue;
 }
 
-h1{
+.active img{
+  transform: scale(1.25);
+  background-color: red;
+}
+
+.active h2{
   color:white;
-  font-size: 10px;
-  display:inline;
+  font-size: 30px;
+  display:inline-block;
+  position: absolute;
+  background-color: yellow;
+  /*margin-bottom: 200px;*/
+}
+
+.active h4{
+  color:white;
+  font-size: 16px;
+  position: absolute;
+  padding-top: 150px;
+  background-color: green;
 }
