--- a/client/styles.css
+++ b/client/styles.css
@@ -30,7 +30,6 @@ body {
 
 }
 
-/*TODO fix positioning of images*/
 img{
   display: inline;
   margin-top: 50px;
@@ -38,10 +37,6 @@ img{
   padding:10px;
   clear: right;
   float: none;
-  /*top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;*/
 }
 
 #imageContainer .active{
@@ -49,13 +44,11 @@ img{
   overflow: auto;
   display: inline;
   height:100%;
-  /*background-color: blue;*/
   z-index: 1;
 }
 
 .active img{
   transform: scale(1.25);
-  /*background-color: red;*/
 }
 
 .active h2{
@@ -65,8 +58,7 @@ img{
   position: absolute;
   padding-top: 10px;
   text-align: center;
-  /*background-color: yellow;*/
-  /*margin-bottom: 200px;*/
+  font-family: sans-serif;
 }
 
 #imageContainer .active h4{
@@ -75,5 +67,5 @@ img{
   position: absolute;
   padding-top: 160px;
   text-align: center;
-  /*background-color: green;*/
+  font-family: sans-serif;
 }
