--- a/client/styles.css
+++ b/client/styles.css
@@ -49,11 +49,14 @@ img{
 
 .active img{
   transform: scale(1.25);
+  padding: 10px;
+  /*border: 1px solid white;*/
+  z-index: 3;
 }
 
 .active h2{
   color:white;
-  font-size: 20px;
+  font-size: 17px;
   display:inline-block;
   position: absolute;
   padding-top: 10px;
@@ -63,7 +66,7 @@ img{
 
 #imageContainer .active h4{
   color:white;
-  font-size: 16px;
+  font-size: 14px;
   position: absolute;
   padding-top: 160px;
   text-align: center;
